--- a/src/app/modules/alunos/alunos.component.html
+++ b/src/app/modules/alunos/alunos.component.html
@@ -1,1 +1,14 @@
-<p>alunos works!</p>
+<div class="container mt-5">
+  <div class="pt-5">
+    <h1>Manutenção de Alunos</h1>
+    <hr class="linha">
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+
+    </div>
+    <div class="col-sm-12">
+
+    </div>
+  </div>
+</div>
