--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,7 +1,11 @@
-<div class="container">
+<div class="container mt-5">
+  <div class="pt-5">
+    <h1>Matricular Alunos</h1>
+    <hr class="linha">
+  </div>
   <div class="row">
     <div class="col-sm-12">
-      <h1>home works!</h1>
+
     </div>
   </div>
 </div>
