--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -8,14 +8,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/alunos']">Alunos</a>
+        <a class="nav-link" [routerLink]="['/alunos']" [routerLinkActive]="['active']">Alunos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/cursos']">Cursos</a>
+        <a class="nav-link" [routerLink]="['/cursos']" [routerLinkActive]="['active']">Cursos</a>
       </li>
     </ul>
   </div>
