--- a/src/app/modules/alunos/alunos.component.html
+++ b/src/app/modules/alunos/alunos.component.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-sm-12 p-3">
           <p-card [style]="{backgroundColor: ''}">
-            <p-table [value]="alunos$" [paginator]="true" [rows]="10" [globalFilterFields]="['nome']" #dt>
+            <p-table [value]="alunos$" [paginator]="true" [rows]="5" [globalFilterFields]="['nome']" #dt>
               <ng-template pTemplate="caption">
                 <div style="text-align: right">
                   <div class="input-group mb-2 mt-2">
@@ -114,3 +114,4 @@
     </div>
   </div>
 </div>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
