--- a/src/app/modules/page404/page404.component.html
+++ b/src/app/modules/page404/page404.component.html
@@ -1,1 +1,14 @@
-<p>page404 works!</p>
+<div class="container mt-5">
+  <div class="row pt-5">
+    <div class="col-sm-12 d-flex justify-content-center">
+      <div>
+        <img class="img-fluid" src="../../../assets/images/creative-404-error.jpg">
+      </div>
+    </div>
+    <div class="col-sm-6 offset-3 d-flex justify-content-center mt-5">
+      <a class="btn btn-success btn-block" href="/home">Voltar</a>
+    </div>
+
+  </div>
+
+</div>
